hphp/test/zend/good/tests-classes/factory_and_singleton_004.php
<?php
class test {

  private function __construct($x) {
  }
}

$obj = new test;

echo "Done\n";
?>